--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,19 +7,32 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "validate:lessons": "tsx src/curriculum/scripts/validate-lessons.ts",
+    "curriculum:tts": "tsx src/curriculum/scripts/generateNarration.ts",
+    "lint": "eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@tanstack/router-devtools": "^1.77.0",
     "@tanstack/solid-form": "^0.25.0",
     "@tanstack/solid-router": "^1.77.0",
     "@tanstack/solid-table": "^8.20.0",
-    "solid-js": "^1.9.9"
+    "solid-js": "^1.9.9",
+    "xstate": "^5.14.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-solid": "^0.14.5",
+    "mp3-duration": "^1.1.0",
+    "openai": "^4.79.1",
     "solid-devtools": "^0.34.3",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.19.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
     "vite-plugin-solid": "^2.11.8"
