--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ apps/*/dist
 .DS_Store
 .env
 .playwright-mcp/
+ 
+# Environment (repo-wide)
+.env.local
+.env*.local
+apps/backend/.env.local
+apps/frontend/.env.local
