--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit",
     "validate:lessons": "tsx src/curriculum/scripts/validate-lessons.ts",
     "curriculum:tts": "tsx src/curriculum/scripts/generateNarration.ts",
+    "curriculum:seed": "tsx src/curriculum/scripts/seedCurriculum.ts",
     "lint": "eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
@@ -17,7 +18,9 @@
     "@tanstack/solid-form": "^0.25.0",
     "@tanstack/solid-router": "^1.77.0",
     "@tanstack/solid-table": "^8.20.0",
+    "convex": "^1.17.0",
     "solid-js": "^1.9.9",
+    "solid-motionone": "^1.0.4",
     "xstate": "^5.14.0"
   },
   "devDependencies": {
