--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "@better-auth/stripe": "^1.3.27",
     "@convex-dev/better-auth": "^0.9.3",
     "@monte/api": "workspace:*",
+    "@monte/lesson-service": "workspace:*",
     "@monte/types": "workspace:*",
     "better-auth": "^1.3.27",
     "convex": "^1.27.5",
